--- a/main.css
+++ b/main.css
@@ -1,4 +1,3 @@
-
 Screen {
     layout: vertical;
 }
@@ -11,6 +10,37 @@ Header {
 Footer {
     dock: bottom;
     height: 1;
+}
+
+ConnectionStatusWidget {
+    height: 1;
+    dock: top;
+    text-align: center;
+    margin: 0;
+}
+
+.connected {
+    background: $success-darken-2;
+}
+
+.connecting {
+    background: $warning-darken-2;
+}
+
+.disconnected {
+    background: $error-darken-2;
+}
+
+.error {
+    background: $error;
+}
+
+.notification {
+    background: $surface;
+    height: 1;
+    dock: top;
+    text-align: center;
+    margin: 0 2;
 }
 
 #main-container {
